# patent-uploader

./: CHANGELOG.md  README.md  package.json  patentupload.sh  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
doc/: 2025-11-20-CLI工具开发总结.md  2025-11-20-更新总结.md  2025-11-21-跳过列转换功能更新.md  CLI工具使用文档.md  Ubuntu输入框卡死问题解决方案.md  打包部署文档.md  提示词.txt  项目设计方案.md  项目需求.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: file_operations.rs  mod.rs  types.rs  upload.rs
src-tauri/src/excel/: mod.rs
src-tauri/src/utils/: logger.rs  mod.rs
src/components/: ColumnMapping.vue  FileOperations.vue  FileUpload.vue  LogViewer.vue  ServerConfig.vue
src/composables/: useFileOperations.ts  useFileUpload.ts  useLogger.ts
src/stores/: index.ts  logger.ts
src/types/: index.ts
src/utils/: httpClient.ts  index.ts
